--- a/roadmap/roadmap.html
+++ b/roadmap/roadmap.html
@@ -1,34 +1,82 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Roadmap Guidance</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>PeerConnect Learning Roadmaps</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="roadsty.css">
 </head>
 <body>
 	<div class="roadmap-container">
-		<h1 class="title">Roadmaps</h1>
+		<h1 class="title">Learning Roadmaps</h1>
 		<div class="roadmap-content">
-			<div class="dsa-block">
-				<h2 class="block-title">Data Structures and Algorithms (DSA)</h2>
+			<div class="roadmap-block dsa-block">
+				<h2 class="block-title"><i class="fas fa-code"></i> Data Structures and Algorithms (DSA)</h2>
 				<ul class="block-list">
-					<li>Arrays and Strings</li>
-					<li>Linked Lists</li>
-					<li>Stacks and Queues</li>
-					<li>Trees and Graphs</li>
-					<li>Dynamic Programming</li>
+					<li><i class="fas fa-array"></i> Arrays and Strings</li>
+					<li><i class="fas fa-link"></i> Linked Lists</li>
+					<li><i class="fas fa-layer-group"></i> Stacks and Queues</li>
+					<li><i class="fas fa-project-diagram"></i> Trees and Graphs</li>
+					<li><i class="fas fa-chart-line"></i> Dynamic Programming</li>
 				</ul>
-                <a href="dsa.html">DSA</a>
+				<a href="dsa.html" class="roadmap-link">Explore DSA Roadmap</a>
 			</div>
-			<div class="blockchain-block">
-				<h2 class="block-title">Blockchain</h2>
+			<div class="roadmap-block blockchain-block">
+				<h2 class="block-title"><i class="fas fa-cubes"></i> Blockchain</h2>
 				<ul class="block-list">
-					<li>Cryptography</li>
-					<li>Smart Contracts</li>
-					<li>Blockchain Architecture</li>
-					<li>Distributed Ledger Technology</li>
-					<li>Cryptocurrency and Wallets</li>
+					<li><i class="fas fa-lock"></i> Cryptography</li>
+					<li><i class="fas fa-file-contract"></i> Smart Contracts</li>
+					<li><i class="fas fa-network-wired"></i> Blockchain Architecture</li>
+					<li><i class="fas fa-book"></i> Distributed Ledger Technology</li>
+					<li><i class="fas fa-wallet"></i> Cryptocurrency and Wallets</li>
 				</ul>
-                <a href="blockchain.html">Blockchain</a>
+				<a href="blockchain.html" class="roadmap-link">Explore Blockchain Roadmap</a>
+			</div>
+			<div class="roadmap-block web-dev-block">
+				<h2 class="block-title"><i class="fas fa-globe"></i> Web Development</h2>
+				<ul class="block-list">
+					<li><i class="fab fa-html5"></i> HTML5 & CSS3</li>
+					<li><i class="fab fa-js"></i> JavaScript</li>
+					<li><i class="fab fa-react"></i> React.js</li>
+					<li><i class="fab fa-node-js"></i> Node.js</li>
+					<li><i class="fas fa-database"></i> Databases</li>
+				</ul>
+				<a href="webdev.html" class="roadmap-link">Explore Web Dev Roadmap</a>
+			</div>
+			<div class="roadmap-block ml-block">
+				<h2 class="block-title"><i class="fas fa-brain"></i> Machine Learning</h2>
+				<ul class="block-list">
+					<li><i class="fas fa-calculator"></i> Mathematics for ML</li>
+					<li><i class="fab fa-python"></i> Python for ML</li>
+					<li><i class="fas fa-chart-bar"></i> Data Preprocessing</li>
+					<li><i class="fas fa-robot"></i> ML Algorithms</li>
+					<li><i class="fas fa-network-wired"></i> Neural Networks</li>
+				</ul>
+				<a href="ml.html" class="roadmap-link">Explore ML Roadmap</a>
+			</div>
+			<div class="roadmap-block mobile-dev-block">
+				<h2 class="block-title"><i class="fas fa-mobile-alt"></i> Mobile Development</h2>
+				<ul class="block-list">
+					<li><i class="fab fa-android"></i> Android Development</li>
+					<li><i class="fab fa-apple"></i> iOS Development</li>
+					<li><i class="fab fa-react"></i> React Native</li>
+					<li><i class="fab fa-flutter"></i> Flutter</li>
+					<li><i class="fas fa-mobile-alt"></i> Mobile UI/UX Design</li>
+				</ul>
+				<a href="mobile-dev.html" class="roadmap-link">Explore Mobile Dev Roadmap</a>
+			</div>
+			<div class="roadmap-block cybersecurity-block">
+				<h2 class="block-title"><i class="fas fa-shield-alt"></i> Cybersecurity</h2>
+				<ul class="block-list">
+					<li><i class="fas fa-network-wired"></i> Network Security</li>
+					<li><i class="fas fa-bug"></i> Ethical Hacking</li>
+					<li><i class="fas fa-lock"></i> Cryptography</li>
+					<li><i class="fas fa-user-shield"></i> Identity and Access Management</li>
+					<li><i class="fas fa-shield-virus"></i> Malware Analysis</li>
+				</ul>
+				<a href="cybersecurity.html" class="roadmap-link">Explore Cybersecurity Roadmap</a>
 			</div>
 		</div>
 	</div>
