--- a/main/index.html
+++ b/main/index.html
@@ -32,10 +32,10 @@
       <div class="hero-text">
         <h2>Welcome to PeerConnect</h2>
         <p>Empower your learning journey with our innovative peer-to-peer tutoring and mentorship platform. Connect with like-minded individuals, share knowledge, and grow together in a supportive community.</p>
-        <a href="connect.html" class="get-started">Get Started</a>
+        <a href="/connect.html" class="get-started">Get Started</a>
       </div>
       <div class="hero-image">
-        <img src="image/786d9949815b450b38d91ed37c8744e3.jpg" alt="Students collaborating">
+        <img src="/main/786d9949815b450b38d91ed37c8744e3.jpg" alt="Students collaborating">
       </div>
     </div>
   </main>
