--- a/profile/profile.html
+++ b/profile/profile.html
@@ -1,4 +1,13 @@
-<!-- PeerConnect Dashboard -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DashBoardt</title>
+  <link rel="stylesheet" href="profile.css">
+</head>
+<body>
+  <!-- PeerConnect Dashboard -->
 <div class="dashboard-container">
   <div class="sidebar">
     <div class="profile-header">
@@ -128,7 +137,6 @@
   </div>
 </div>
 
-
 <script>
   const formData = JSON.parse(localStorage.getItem('formData'));
   const profilePhotoData = localStorage.getItem('profilePhoto');
@@ -145,3 +153,8 @@
     window.location.href = 'edit-profile.html';
   });
 </script>
+
+</body>
+</html>
+
+
