--- a/main/index.html
+++ b/main/index.html
@@ -20,6 +20,7 @@
         <a href="/connect.html">Connect</a>
         <a href="/roadmap/roadmap.html">Roadmap</a>
         <a href="/chat/chat.html">Chat</a>
+        <a href="/profile/profile.html">Profile</a>
       </div>
       <div class="auth-buttons">
         <a href="login.html" class="login-btn">Login</a>
